fix(zbugs): Adjusting contrast of comment input field and pill (#3181)

--- a/apps/zbugs/src/index.css
+++ b/apps/zbugs/src/index.css
@@ -696,7 +696,7 @@ textarea.autoResize {
 .pill {
   background: transparent 0.375rem center no-repeat;
   padding: 0.25rem 0.5rem 0.25rem 1.625rem;
-  border-color: var(--color-light-outline);
+  border-color: var(--color-button-outline);
   border-width: 1px;
   border-radius: 2rem;
   line-height: 1;
@@ -794,7 +794,7 @@ textarea.autoResize {
 .comment-input {
   margin: 1rem 0;
   background-color: var(--color-background);
-  border: 1px solid var(--color-nav-selected);
+  border: 1px solid var(--color-text-dimmed-label);
   border-radius: 0.5rem;
   padding: 1rem;
   display: block;
